# thetAV

./: #theta_null_point.py#  .basic_conda.yml  .gitignore  .readthedocs.yaml  .rtd.yml  .tools.py.swp  COPYING.txt  ChangeLog  Dockerfile  LICENSE  README  README.md  __init__.py  analytic_theta_point.py  aux_hyper.py  environment.yml  ex-morphisms.sage  example.ipynb  example.sage  makefile  morphisms_level2.py  pyproject.toml  rever.xsh  setup.py  ssell_curves.py  testing.ipynb  theta_null_point.py  theta_null_point.py~  theta_point.py  tools.py  tools.py~
.github/workflows/: lint.yml  release_to_pypi.yml  test.yml
avisogenies_magma/: 00.AUTHORS  00.BUGS  00.CHANGELOG  00.COPYING  00.README  00.TIMINGS  00.TODO  01.publish  02.test
avisogenies_magma/doc/: Arithmetic  precomp
avisogenies_magma/examples/: curve-db-plot.m  curve-db.m  debug.m  ex-CompleteLaw.m  ex-Isogenies.m  ex-draw.m  ex-groupc.m  ex-morphisms.m
avisogenies_magma/htdocs/: beautiful.dot  index.html
avisogenies_sage/: __init__.py  abelian_variety.py  analytic_theta_point.py  aux_hyper.py  av_point.py  constructor.py  ep_elements.py  eta_maps.py  morphisms.py  morphisms_aux.py  morphisms_level2.py  morphisms_level4.py  theta_null_point.py  theta_point.py  tools.py
doc/: conf.py
examples/: arithmetic.md  arithmetic.sage  example.sage  isogeny.md  isogeny.sage  type_conversion.sage
thetAV/: analytic_theta_point.py  aux_hyper.py  constructor.py  ep_elements.py  eta_maps.py  morphisms_aux.py  morphisms_level2.py  morphisms_level4.py  ssell_curves.py~  theta_null_point.py  theta_point.py  tools.py
(+44 files in other folders)
