[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thetAV"
version = "0.1.3"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "Compute with abelian varieties"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = [
    "thetAV",
]
